# teriyaki

./: .gitignore  CMakeLists.txt  Makefile  README.md  Scanner.cpp  TeriyakiConfig.h.in  Token.cpp  TokenType.h  app.js  example.txt  language-syntax.txt  main.c  main.cpp  test-file.txt
lib/: CMakeLists.txt  Scanner.cpp  Token.c  Token.cpp  TokenType.h  allocator.c  allocator.h  error.h  expression.h  init.c  init.h  lexer.h  parse.h  parser.h  scanner.c  scanner.h  teriyaki.h  token.c  token.h  token_type.h
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  example.txt  runner.c  test_token.c
